--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,3 +7,11 @@ html {
     background-color: blue;
     color: aqua;
 }
+
+.menu {
+    color: green;
+}
+
+footer {
+    background-color: azure;
+}
